logs/Slang/generated/hdlconv/hdlconvertor_p87.sv.log
name: hdlconvertor_p87
description: Tests imported from hdlconv
files: /home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2012/p87.sv
should_fail: 0
tags: hdlconv
incdirs: 
top_module: 
rc: 1

../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2012/p87.sv:4:9: error: use of undeclared identifier '$isunbounded'
    if ($isunbounded(max_cks)) begin
        ^~~~~~~~~~~~
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2012/p87.sv:7:48: error: expected expression
           (reset_n && $rose(expr)) |-> (expr [* min_cks]);
                                               ^
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2012/p87.sv:14:47: error: expected expression
           (reset_n && $rose(expr)) |-> (expr[* min_cks:max_cks])
                                              ^
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2012/p87.sv:15:23: error: expected expression
           ##1 (!expr);
                      ^
